# sams-android

./: .gitignore  build.gradle  config.gradle  gradle.properties  settings.gradle
FlycoTabLayout_Lib/: build.gradle
app/: build.gradle
app/libs/: zlib-release.aar
app/src/androidTest/java/com/zp/android/scmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: data.json
app/src/main/java/pers/zjc/sams/app/: AppComponent.java  AppConfig.java  AppDatabase.java  AppModule.java  DateTypeAdapter.java  HttpCookie.java  (+4 more)
app/src/main/res/color/: color_list_blue_black.xml
app/src/main/res/drawable/: bg_countdown_view.xml  bg_course_id.xml  camera_switching_img.xml  fingerprint_img.xml  icon_add_photo.xml  selector_btn_finish.xml  selector_open_close.xml  selector_open_close1.xml  selector_rectangle_frame.xml  shape_circle_absent.xml  shape_circle_earlier_leave.xml  shape_circle_late.xml  shape_circle_leaving.xml  shape_circle_normal.xml  shape_click_btn.xml  shape_ctl_bg.xml  shape_ctl_bg_trans_20.xml  shape_exit_btn.xml  shape_filter_default_bg.xml  shape_filter_selected_bg.xml  shape_gray_btn.xml  shape_maint_task_expand.xml  shape_offline_login_btn.xml  shape_pop_check_des.xml  shape_rectangle_frame_selected.xml  shape_rectangle_frame_unselected.xml  shape_reform_keypoint1.xml  shape_register_btn.xml  shape_search_et_bg.xml  shape_signed_btn.xml  shape_stroke_select.xml  shape_stroke_unselect.xml  shape_submit_btn.xml  shape_task_checkitem1.xml  shape_task_checkitem2_1.xml  shape_task_checkitem2_2.xml  shape_task_checkitem_standard.xml  shape_task_checkitem_unstandard.xml  shape_task_exec_btn1.xml  shape_task_exec_btn2.xml  (+21 more)
app/src/main/res/layout/: activity_insp_area_select.xml  activity_login.xml  activity_maint_search.xml  activity_org_select.xml  activity_photo_browse.xml  activity_photo_edit.xml  activity_point.xml  activity_register.xml  activity_vedio_match_image.xml  base_back_title.xml  base_back_title_right_toolbar.xml  base_back_title_toolbar.xml  base_title_right_toolbar.xml  base_title_toolbar.xml  dialog_register.xml  fragment_alarm_host_filter.xml  fragment_alarm_host_list.xml  fragment_alarm_info_list.xml  fragment_alarm_management.xml  fragment_alarm_withdrawal_list.xml  fragment_approval.xml  fragment_attence_stat.xml  fragment_calendar.xml  fragment_center.xml  fragment_changearea.xml  fragment_check.xml  fragment_check_item_detail.xml  fragment_course_add.xml  fragment_course_list.xml  fragment_delayed_arming.xml  fragment_device_manage.xml  fragment_edit_course.xml  fragment_edit_insp_point.xml  fragment_education.xml  fragment_education_filter.xml  fragment_education_list.xml  fragment_education_signin.xml  fragment_equipment.xml  fragment_equipment_filter.xml  fragment_equipment_list.xml  (+131 more)
app/src/main/res/menu/: menu_course_manage.xml  menu_photo_browse.xml
app/src/main/res/values/: attrs.xml  colors.xml  dashboardview_attrs.xml  ids.xml  strings.xml  styles.xml
calendarLib/: build.gradle
calendarLib/src/main/: AndroidManifest.xml
calendarLib/src/main/res/layout/: item_calendar.xml  view_calendarview.xml
calendarLib/src/main/res/values/: attrs.xml  strings.xml
facelibrary/: build.gradle
facelibrary/src/androidTest/java/com/xunmei/facelibrary/: ExampleInstrumentedTest.java
facelibrary/src/main/: AndroidManifest.xml
facelibrary/src/main/java/cn/face/sdk/: FaceAttrRet.java  FaceAttribute.java  FaceCamera.java  FaceCommon.java  FaceDetTrack.java  FaceInfo.java  FaceInterface.java  FaceNisLivService.java  FaceNisLiveParam.java  FaceNisLiveResInfo.java  FaceNisLiveness.java  FaceParam.java  FaceRecog.java  FaceService.java  FaceVersion.java
facelibrary/src/main/java/com/xunmei/facelibrary/: ConStant.java
facelibrary/src/main/res/values/: strings.xml  styles.xml
facelibrary/src/test/java/com/xunmei/facelibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
keystore/: android.keystore  debug.keystore
lib_face/: CMakeLists.txt  build.gradle
lib_face/src/androidTest/java/com/face/gosuncn/facelib/: ExampleInstrumentedTest.java
lib_face/src/main/: AndroidManifest.xml
lib_face/src/main/cpp/GSFaceLib/: CMakeLists.txt  GSFaceRecog.cpp
lib_face/src/main/cpp/GSFaceLib/include/: GoNcFaceRegSDK.h
lib_face/src/main/cpp/GSFaceLib/util/: AndroidLog.h  CUtil.cpp  CUtil.h
lib_face/src/main/java/com/gosuncn/face/listener/: CaremaType.java  Delegate.java  FaceInterface.java  OnCaptureCallback.java  OnFrameListener.java
lib_face/src/main/java/com/gosuncn/face/util/: Contants.java  LogUtils.java
lib_face/src/main/java/com/gosuncn/face/view/: CameraConfigurationManager.java  CameraPreview.java  FaceView.java
lib_face/src/main/java/com/gosuncn/facelib/: JniConstants.java  JniFaceRecog.java
lib_face/src/main/java/com/gosuncn/facelib/bean/: FaceDetectInfo.java  FaceFeature.java  ImageFrame.java
lib_face/src/test/java/com/face/gosuncn/facelib/: ExampleUnitTest.java
scannerlibrary/: build.gradle
scannerlibrary/src/main/java/com/threehalf/scanner/: CaptureActivity.java  QRCodeFactory.java
scannerlibrary/src/main/res/layout/: activity_capture.xml
scannerlibrary/src/main/res/values/: ids.xml
zlib/: build.gradle
zlib/src/main/: AndroidManifest.xml
zlib/src/main/res/drawable/: progress.xml
zlib/src/main/res/values/: colors.xml  strings.xml
(+383 files in other folders)
